# TGbot_ecomm

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: API.md
tests/: test_client.py  test_config.py  test_logger.py  test_ui.py  test_validators.py
tgecomm/: __init__.py  client.py  config.py  logger.py  main.py  media_handler.py  metrics.py  ui.py  validators.py
